# eventsourcing-fastapi-graphql

./: .gitignore  Dockerfile  README.md  docker-compose.yml  noxfile.py  pyproject.toml
pool/: pgbouncer.ini  userlist.txt
src/app/: bank_accounts.py
src/domain/: bank_account.py
src/entrypoints/: api.py
src/entrypoints/api/: __init__.py  app.py  config.py  graphql.py
src/entrypoints/api/bank_account/: schema.py
src/entrypoints/api/common/: graphql.py
tests/: conftest.py  test_bankaccounts_application.py
tests/integration/: conftest.py  test_intg_bank_account_api.py  test_intg_bankaccounts_application.py  utils.py
