[tool.poetry]
name = "eventsourcing-fastapi-graphql"
version = "0.1.0"
description = ""
authors = ["Martin R <apurplethinker@gmail.com>"]
license = "BSD 3"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
eventsourcing = "^9.2.22"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
